[package]
name = "tabulon_dxf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["std"]
std = ["tabulon/std"]
libm = ["tabulon/libm"]

[dependencies]
dxf = { version = "0.6", git = "https://github.com/xorgy/dxf-rs", rev = "3311c61" }
getrandom = "0.3.1"
joto_constants = "0.2.0"
parley = { workspace = true }
tracing = { workspace = true }
uuid = "1.9"

tabulon = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.1", features = ["wasm_js"] }
uuid = { version = "1.9", features = ["js", "serde", "v4"] }

[lints]
workspace = true
