[package]
name = "tabulon_dxf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
default = ["std"]
std = ["tabulon/std"]
libm = ["tabulon/libm"]

[dependencies]
dxfscan = "0.1.0"
dxfbin = { version = "0.1", default-features = false }
joto_constants = "0.2.0"
parley = { workspace = true }
tracing = { workspace = true }

tabulon = { workspace = true }

[lints]
workspace = true
