[package]
name = "dxf_viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[features]
tracing-tracy = ["dep:tracing-tracy", "dep:tracy-client"]
tracing-tracy-memory = ["tracing-tracy"]

[dependencies]
anyhow = "1.0.98"
joto_constants = "0.2.0"
pollster = "0.4"
tracing-subscriber.workspace = true
tracing-tracy = { workspace = true, optional = true }
tracing.workspace = true
tracy-client = { workspace = true, optional = true }
ui-events = "0.3.0"
ui-events-winit = "0.3.0"
vello = "0.7.0"
winit = { version = "0.30.10", default-features = false }
dpi = "0.1.2"

static_aabb2d_index = { version = "2.0.0", features = ["unsafe_optimizations"] }

tabulon = { workspace = true, features = ["std"] }
tabulon_dxf = { workspace = true }
tabulon_vello = { workspace = true }

[lints]
workspace = true
