[package]
name = "vello_simple"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow = "1.0.98"
pollster = "0.4"
vello = "0.7.0"
winit = "0.30.10"

tabulon = { version = "0.1.0", path = "../../tabulon" }
tabulon_vello = { workspace = true }

[lints]
workspace = true
